--- a/Practice/background.html/08backgroundsize.html
+++ b/Practice/background.html/08backgroundsize.html
@@ -13,10 +13,25 @@
             border: 10px dashed blue;
             background-image: url(../../Images/backgroundimage.jpg);
             background-repeat: no-repeat;
+            background-size: 200px;
+        }
+        .cover{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        .contain{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
             background-size: contain;
-            /* background-size: cover; */
-            /* background-size: 200px; */
-            /* padding: 100px; */
+        }
+        .center{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
         }
     </style>
 </head>
@@ -24,5 +39,11 @@
     <h1>Background Size</h1>
     <hr>
     <div class="background-size">background-size</div>
+    <hr>
+    <div class="cover">cover</div>
+    <hr>
+    <div class="contain">contain</div>
+    <hr>
+    <div class="center">center</div>
 </body>
 </html>
