--- a/Practice/background.html/06backgroundposition.html
+++ b/Practice/background.html/06backgroundposition.html
@@ -13,15 +13,43 @@
             border: 10px dashed blue;
             background-image: url(../../Images/backgroundimage.jpg);
             background-repeat: no-repeat;
-            /* background-repeat: repeat; */
-            /* background-repeat: repeat-x; */
-            /* background-size: 200px; */
-            padding: 100px;
-            /* background-origin: border-box; */
-            /* background-origin: content-box; */
-            background-origin: padding-box;
             background-position: 60% 40%;
-            
+            background-size: 300px;
+        }
+        .top{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-position: top;
+            background-size: 300px;
+        }
+        .right{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-position: right;
+            background-size: 300px; 
+        }
+        .bottom{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-position: bottom;
+            background-size: 300px;
+        }
+        .left{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size: 300px;
+        }
+        .center{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 300px;
         }
     </style>
 </head>
@@ -29,5 +57,15 @@
     <h1>Background Position</h1>
     <hr>
     <div class="background-position">background-position</div>
+    <hr>
+    <div class="top">top</div>
+    <hr>
+    <div class="right">right</div>
+    <hr>
+    <div class="bottom">bottom</div>
+    <hr>
+    <div class="left">left</div>
+    <hr>
+    <div class="center">center</div>
 </body>
 </html>
