--- a/Practice/background.html/07backgroundrepeat.html
+++ b/Practice/background.html/07backgroundrepeat.html
@@ -12,14 +12,44 @@
         .background-repeat{
             border: 10px dashed blue;
             background-image: url(../../Images/backgroundimage.jpg);
-            /* background-repeat: repeat; */
+            background-repeat: repeat;
             background-size: 200px;
-            /* background-repeat: no-repeat; */
-            /* background-repeat: repeat-x; */
-            /* background-repeat: repeat-y; */
-            /* background-repeat: round; */
+        }
+        .no-repeat{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: no-repeat;
+            background-size: 500px;
+        }
+        .repeat-x{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: repeat-x;
+            background-size: 200px;
+        }
+        .repeat-y{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: repeat-y;
+            background-size: 200px;
+        }
+        .round{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: round;
+            background-size: 200px;
+        }
+        .space{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
             background-repeat: space;
-            /* background-repeat: unset; */
+            background-size: 200px;
+        }
+        .unset{
+            border: 10px dashed blue;
+            background-image: url(../../Images/backgroundimage.jpg);
+            background-repeat: unset;
+            background-size: 200px;
         }
     </style>
 </head>
@@ -27,5 +57,17 @@
     <h1>Background Repeat</h1>
     <hr>
     <div class="background-repeat">background-repeat</div>
+    <hr>
+    <div class="no-repeat">no-repeat</div>
+    <hr>
+    <div class="repeat-x">repeat-x</div>
+    <hr>
+    <div class="repeat-y">repeat-y</div>
+    <hr>
+    <div class="round">round</div>
+    <hr>
+    <div class="space">space</div>
+    <hr>
+    <div class="unset">unset</div>
 </body>
 </html>
