--- a/Task/03olacabs.html
+++ b/Task/03olacabs.html
@@ -39,8 +39,9 @@
         }
         .y{
             color: black;
-            margin-left: 200px;
+            margin-left: 90px;
             font-size: 50px;
+            padding: 80px;
         }
         .d{
             margin-left: 200px;
@@ -50,6 +51,14 @@
         .d > div{
             padding-left: 20px;
             /* background-color: azure; */
+        }
+        .s{
+            margin-right: 300px;
+            padding: 200px;
+        }
+        .i{
+            padding: 30px;
+            /* margin-left: 10px; */
         }
     </style>
 </head>
@@ -103,8 +112,11 @@
     </div>
 <!-- </div> -->
 <br> <br> <br>
-        <div>
-            <img src="../Images/olasymbol.svg" alt="">
+        <div class="s">
+            <img src="../Images/olasymbol.svg" alt="" width="60px"> <br> 
+            <!-- <div class="i"> -->
+            <img src="../Images/olainstagram.svg" alt="" >
+        <!-- </div> -->
         </div>
 </body>
 
