--- a/Task/03olacabs.html
+++ b/Task/03olacabs.html
@@ -37,20 +37,19 @@
         .image > div{
             padding-left: 20px;
         }
-        .left{
-            margin-left: 10px;
-            display: flex;
-        }
         .y{
             color: black;
             margin-left: 200px;
             font-size: 50px;
         }
-        .left > div{
-            padding-left: 20px;
-        }
         .d{
-            /* margin-bottom: 20px; */
+            margin-left: 200px;
+            /* background-color: rgb(192, 188, 188); */
+            display: flex;
+        }
+        .d > div{
+            padding-left: 20px;
+            /* background-color: azure; */
         }
     </style>
 </head>
@@ -83,11 +82,22 @@
     </div>
     <br>
     <br>
-    <div class="left">
-        <h1 class="y">Download our apps to <br> get the best experience </h1> 
-        <div class="d">
-            <img src="../Images/olasymbol.svg" alt="" height="200px" width="300px">
+        <h1 class="y">Download our apps to <br> get the best experience </h1>
+    <div class="d">
+            <div>
+            <img src="../Images/ola1_files/ola-ev.svg" alt="" height="100px" width="80px">
+            <h2>Ola Electric <img src="../Images/right-arrowola.svg" alt="" height="10px" width="30px"></h2>
+            <h3>Connect, control and <br>communicate with your Ola S1</h3>
         </div>
+            <div>
+                <img src="../Images/ola1_files/olalogo.svg" alt="" height="100px" width="80px">
+                <h2>Ola <img src="../Images/right-arrowola.svg" alt="" height="10px" width="30px"></h2>
+                <h3>Book cabs, buy insurance, access <br> Ola Money and much more</h3>
+            </div>
+            <div>
+                <img src="../Images/ola1_files/ola-driver.svg" alt="" height="100px" width="80px">
+                <h2></h2>
+            </div>
     </div>
 </body>
 
