--- a/Task/03olacabs.html
+++ b/Task/03olacabs.html
@@ -82,9 +82,10 @@
     </div>
     <br>
     <br>
+    <!-- <div> -->
         <h1 class="y">Download our apps to <br> get the best experience </h1>
     <div class="d">
-            <div>
+        <div>
             <img src="../Images/ola1_files/ola-ev.svg" alt="" height="100px" width="80px">
             <h2>Ola Electric <img src="../Images/right-arrowola.svg" alt="" height="10px" width="30px"></h2>
             <h3>Connect, control and <br>communicate with your Ola S1</h3>
@@ -96,9 +97,15 @@
             </div>
             <div>
                 <img src="../Images/ola1_files/ola-driver.svg" alt="" height="100px" width="80px">
-                <h2></h2>
+                <h2>Ola Driver <img src="../Images/right-arrowola.svg" alt="" height="10px" width="30px"></h2>
+                <h3>Register as a driver to take rides, <br>see your earnings and incentives</h3>
             </div>
     </div>
+<!-- </div> -->
+<br> <br> <br>
+        <div>
+            <img src="../Images/olasymbol.svg" alt="">
+        </div>
 </body>
 
 </html>
