--- a/Practice/Display/03displayflex.html
+++ b/Practice/Display/03displayflex.html
@@ -6,6 +6,20 @@
     <title>Display Flex</title>
 </head>
 <body>
-    
+    <div class="y">
+        <h2>Hello</h2>
+        <h2>Hello</h2>
+        <h2>Hello</h2>
+    </div>
+    <div class="s">
+        <div class="row">
+            <div class="col-50"><img src="../../Images/Image.jpg" alt=""></div>
+            <div class="col-50">Lorem</div>
+            <div class="row">
+                <div class="col-25"><img src="../../Images/Image.jpg" alt=""></div>
+                <div class="col-25">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, minus?</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
