--- a/Task/03Position.html
+++ b/Task/03Position.html
@@ -13,6 +13,9 @@
             box-sizing: border-box;
             /* border:2px solid darkblue; */
         }
+        body{
+            overflow: hidden;
+        }
         div[class*="box"]{
             /* box-sizing: border-box; */
             /* border-color: rgb(24, 24, 228); */
