--- a/Practice/Position.html
+++ b/Practice/Position.html
@@ -44,7 +44,7 @@
         }
         .box-4{
             background-color: silver;
-            top: 200px;
+            top: 100px;
             position: absolute;
             left: 1000px;
             z-index: 4;
@@ -56,19 +56,20 @@
         }
         .box-6{
             background-color: cornflowerblue;
-            /* position: sticky; */
-            left: 400px;
+            position: absolute;
+            right: 100px;
+            /* top: 10px; */
             z-index: 6;
         }
         .box-7{
             background-color: goldenrod;
-            position: fixed;
+            position: sticky;
             right: 200px;
             top: 10px;
             /* z-index: 7; */
         }
         .y{
-            position: sticky;
+            position: fixed;
             width: 100%;
             z-index: 8;
             border: 5px dotted white;
