--- a/Practice/Position.html
+++ b/Practice/Position.html
@@ -53,6 +53,7 @@
             background-color: yellowgreen;
             position: static;
             z-index: 5;
+            /* top: 100px; */
         }
         .box-6{
             background-color: cornflowerblue;
@@ -64,8 +65,8 @@
         .box-7{
             background-color: goldenrod;
             position: sticky;
-            right: 200px;
-            top: 10px;
+            right: 500px;
+            top: 0;
             /* z-index: 7; */
         }
         .y{
